pipeline/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: teamf-frontend-dev
  namespace: cc-tech-newgrad-f-frontend-dev
  name: teamf-frontend-dev
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      name: teamf-frontend-dev
  strategy:
    rollingUpdate:
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: teamf-frontend-dev
    spec:
      containers:
        - name: teamf-frontend-dev
          image: teamf-frontend-image
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 50Mi
      automountServiceAccountToken: true # Istio sidecar needs to communicate with k8s API
