pipeline/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-allow-network
  namespace: cc-tech-newgrad-f-frontend-dev
spec:
  podSelector: {}
  egress:
    - {}
  ingress:
    - {}
  policyTypes:
    - Egress
    - Ingress
